--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .custom-scrollbar {
   overflow: auto;
   scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: #00adb5 #222831; /* For Firefox */ 
+  scrollbar-color: #00adb5 #161b22; /* For Firefox */ 
 }
 
 /* Custom scrollbar styles for WebKit-based browsers */
@@ -31,7 +31,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: #222831;
+  background: #161b22;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
